--- a/salary/templates/salary/route_time.html
+++ b/salary/templates/salary/route_time.html
@@ -24,13 +24,17 @@
     <div class="tableContainer table">
         <div class="thead flex">
             <div class="theadTh th personalFlex"><input type="checkbox" class="selectAll"></div>
-            <div class="theadTh th personalFlex">연번</div>
+            <div class="theadTh th personalFlex">연번</div>         
             <div class="theadTh th personalFlex">노선명</div>
-            <div class="theadTh th personalFlex">차고지 도착</div>
+            <div class="theadTh th personalFlex">차고지 도착(내부)</div>
+            <div class="theadTh th personalFlex">차고지 도착(외부)</div>
             <div class="theadTh th personalFlex">사전 준비 시간</div>
+            <div class="theadTh th personalFlex">첫 정류장 대기장소</div>
             <div class="theadTh th personalFlex">출발 시간</div>
             <div class="theadTh th personalFlex">도착 시간</div>
-            <div class="theadTh th personalFlex">차량 입고</div>
+            <div class="theadTh th personalFlex">대기장소</div>
+            <div class="theadTh th personalFlex">차량 입고(외부)</div>
+            <div class="theadTh th personalFlex">차량 입고(내부)</div>
             <div class="theadTh th personalFlex">뒷정리 완료</div>
             <div class="theadTh th">
                 <div class="theadThTh th personalFlex">운행 요일</div>
@@ -52,14 +56,14 @@
         <div class="tbody">
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
+                <div class="tbodyTd td personalFlex">1-1</div>
                 <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
+                <div class="tbodyTd td personalFlex">06:00</div>
                 <div class="tbodyTd td personalFlex">07:10</div>
                 <div class="tbodyTd td personalFlex">07:20</div>
                 <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">10:40</div>
+                <div class="tbodyTd td personalFlex">10:50</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -73,14 +77,14 @@
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">2</div>
-                <div class="tbodyTd td personalFlex">영통7</div>
-                <div class="tbodyTd td personalFlex">05:13</div>
-                <div class="tbodyTd td personalFlex">06:13</div>
-                <div class="tbodyTd td personalFlex">06:23</div>
-                <div class="tbodyTd td personalFlex">07:15</div>
-                <div class="tbodyTd td personalFlex">07:25</div>
-                <div class="tbodyTd td personalFlex">07:35</div>
+                <div class="tbodyTd td personalFlex">1-2</div>
+                <div class="tbodyTd td personalFlex">집-북위례신도시_K1-H2</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">07:10</div>
+                <div class="tbodyTd td personalFlex">07:20</div>
+                <div class="tbodyTd td personalFlex">09:30</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">09:40</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
@@ -94,14 +98,14 @@
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
+                <div class="tbodyTd td personalFlex">2-1</div>
+                <div class="tbodyTd td personalFlex">평촌7</div>
                 <div class="tbodyTd td personalFlex">07:00</div>
                 <div class="tbodyTd td personalFlex">07:10</div>
                 <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">08:30</div>
+                <div class="tbodyTd td personalFlex">09:00</div>
+                <div class="tbodyTd td personalFlex">09:10</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -115,14 +119,14 @@
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
+                <div class="tbodyTd td personalFlex">2-2</div>
+                <div class="tbodyTd td personalFlex">집-평촌7</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
                 <div class="tbodyTd td personalFlex">07:10</div>
                 <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">08:30</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">08:40</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -136,14 +140,14 @@
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">3-1</div>
+                <div class="tbodyTd td personalFlex">아주대/권선동/망포</div>
+                <div class="tbodyTd td personalFlex">16:43</div>
+                <div class="tbodyTd td personalFlex">17:20</div>
+                <div class="tbodyTd td personalFlex">17:30</div>
+                <div class="tbodyTd td personalFlex">18:45</div>
+                <div class="tbodyTd td personalFlex">18:50</div>
+                <div class="tbodyTd td personalFlex">19:00</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -151,41 +155,41 @@
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
+                <div class="tbodyTd td personalFlex">퇴근</div>
                 <div class="tbodyTd td personalFlex">-</div>
             </div>
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">3-2</div>
+                <div class="tbodyTd td personalFlex">집-아주대/권선동/망포</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">17:20</div>
+                <div class="tbodyTd td personalFlex">17:30</div>
+                <div class="tbodyTd td personalFlex">18:45</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">18:55</div>
+                <div class="tbodyTd td personalFlex">O</div>
+                <div class="tbodyTd td personalFlex">O</div>
+                <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
                 <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
+                <div class="tbodyTd td personalFlex">퇴근</div>
                 <div class="tbodyTd td personalFlex">-</div>
             </div>
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">4-1</div>
+                <div class="tbodyTd td personalFlex">동탄2신도시3차</div>
+                <div class="tbodyTd td personalFlex">16:44</div>
+                <div class="tbodyTd td personalFlex">17:05</div>
+                <div class="tbodyTd td personalFlex">17:15</div>
+                <div class="tbodyTd td personalFlex">17:57</div>
+                <div class="tbodyTd td personalFlex">18:30</div>
+                <div class="tbodyTd td personalFlex">18:40</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -193,20 +197,20 @@
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
+                <div class="tbodyTd td personalFlex">퇴근</div>
                 <div class="tbodyTd td personalFlex">-</div>
             </div>
 
             <div class="route flex">
                 <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
+                <div class="tbodyTd td personalFlex">4-2</div>
+                <div class="tbodyTd td personalFlex">집-동탄2신도시3차</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">17:05</div>
+                <div class="tbodyTd td personalFlex">17:15</div>
+                <div class="tbodyTd td personalFlex">17:57</div>
+                <div class="tbodyTd td personalFlex">00:00</div>
+                <div class="tbodyTd td personalFlex">18:07</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
@@ -214,50 +218,11 @@
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">O</div>
                 <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
+                <div class="tbodyTd td personalFlex">퇴근</div>
                 <div class="tbodyTd td personalFlex">-</div>
             </div>
 
-            <div class="route flex">
-                <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
-                <div class="tbodyTd td personalFlex">-</div>
-            </div>
-            <div class="route flex">
-                <div class="tbodyTd td personalFlex"><input type="checkbox"></div>
-                <div class="tbodyTd td personalFlex">1</div>
-                <div class="tbodyTd td personalFlex">북위례신도시_K1</div>
-                <div class="tbodyTd td personalFlex">07:00</div>
-                <div class="tbodyTd td personalFlex">07:10</div>
-                <div class="tbodyTd td personalFlex">07:20</div>
-                <div class="tbodyTd td personalFlex">09:30</div>
-                <div class="tbodyTd td personalFlex">09:40</div>
-                <div class="tbodyTd td personalFlex">09:50</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">O</div>
-                <div class="tbodyTd td personalFlex">X</div>
-                <div class="tbodyTd td personalFlex">출근</div>
-                <div class="tbodyTd td personalFlex">-</div>
-            </div>ss
+         
         </div>
     </div>
 </div>
