--- a/static/css/education/educational_manager.css
+++ b/static/css/education/educational_manager.css
@@ -1,139 +1,363 @@
-.container{
+.searchAreaBox form {
+    width: 100%;
+}
+
+.searchTool {
     display: flex;
 }
 
-.main-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-
+.searchTitle {
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: black;
+    margin-right: 1rem;
 }
 
-.column {
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 53rem;
-    height: 45rem;
-    overflow-y: auto; 
+.searchTool input[type=text] {
+    width: 20rem;
+    height: 2.4rem;
+    padding-left: 0.3rem;
+    border: 0.1rem solid #B5B5B5;
+    border-radius: 0.2rem;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.searchTool label {
+    font-size: 1.6rem;
+    color: black;
+    margin-left: 2rem;
+    margin-right: 1rem;
+}
+
+.searchTool input[type=submit] {
+    background-color: #444444;
+    margin-left: 1.8rem
 }
 
 
-.empty {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0f0f0;
-}
 
-.section-header {
-    font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
-    background-color: #444;
-    color: white;
-    padding: 10px;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-}
-
-.sub-section {
-    margin-bottom: 20px;
-}
-
-.sub-section-header {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-.educationalUl {
-    list-style-type: none;
+.contentsAreaBox {
+    position: relative;
+    width: 100%;
     padding: 0;
 }
 
-.educationalUl li {
-    margin-bottom: 1.8rem;
-    font-size: 1.4rem;
-    margin-left: 2.6rem;
+.contentsAreaBoxDelete {
+    top: -6.5rem;
+    right: 2rem;
+    position: absolute;
+    background-color: #444444;
 }
 
-.educationalTable {
+.contentsAreaBoxRevise{
+    top: -6.5rem;
+    right: 2rem;
+    position: absolute;
+    background-color: #444444;
+    margin-right: 7rem;
+}
+
+.download {
+    position: absolute;
+    top: -6.5rem;
+    right: 9rem;
+    background-color: #0069D9;
+}
+.print {
+    position: absolute;
+    top: -6.5rem;
+    right: 17.5rem;
+    background-color: #0069D9;
+}
+
+.documentTableBox {
     width: 100%;
-    border-collapse: collapse;
-    text-align: center
+    height: 73rem;
 }
 
-.educationalTable td {
-    height: 3.4rem;
-    border: 1px solid #ccc;
+.documentTableBox td {
+    padding: 0;
+}
+
+.documentTableHeader {
+    width: calc(100% - 0.6rem);
+    height: 3.6rem;
+    border-spacing: 0;
+}
+
+.documentTableHeader tr {
+    width: 100%;
+    height: 100%;
+    background-color: #444444;
+}
+
+.documentTableHeader td {
+    text-align: center;
     font-size: 1.4rem;
+    color: white;
 }
 
-.sectionText {
-    margin-left: 1rem;
+.documentTableHeader td:nth-child(1) {
+    width: 3%;
 }
 
-.button{
+.documentTableHeader td:nth-child(2) {
+    text-align: left;
+    padding-left: 1rem;
+    box-sizing: border-box;
+    width: 80%;
+}
+
+.documentTableHeader td:nth-child(3) {
+    width: 7%;
+}
+
+.documentTableHeader td:nth-child(4) {
+    width: 10%;
+}
+
+.documentTableBodyBox {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 69.4rem;
+    overflow-y: scroll;
+}
+
+.documentTableBodyBox::-webkit-scrollbar {
+    width: 0.6rem;
+}
+
+.documentTableBodyBox::-webkit-scrollbar-thumb {
+    height: 17%;
+    background-color: #444444;
+    border-radius: 1rem;
+}
+
+.documentTableBodyBox::-webkit-scrollbar-track {
+    background-color: #F5F5F5;
+}
+
+.documentCoverTable {
+    width: 100%;
+    height: auto;
+    border-spacing: 0;
+}
+
+
+.documentContentsTable {
+    width: 100%;
+    border-spacing: 0;
+}
+
+.documentContentsTable thead tr {
+    width: 100%;
+    height: 3.6rem;
+    background-color: #EFEFEF;
+}
+
+.documentContentsTable thead td {
+    font-size: 1.4rem;
+    border-right: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
+}
+
+.documentContentsTable thead td:nth-child(1) {
+    text-align: center;
+    width: 3%;
+}
+
+.documentContentsTable thead td:nth-child(2) {
+    text-align: left;
+    width: 80%;
+    padding-left: 1rem;
+    box-sizing: border-box;
+}
+
+.folderBox{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.folderBox div:nth-child(2){
+    margin-left: 1rem;
+    margin-right: 3rem;
+}
+
+.folderBox div:nth-last-child(1){
+    position: absolute;
+    top: 50%;
+    right: 2rem;
+    transform: translate(0, -50%);
+    display: flex;
     align-items: center;
 }
 
-button {
-    color: #808080;
+.groupName{
+    background-color: transparent;
     border: none;
-    border-radius: 4rem;
+    outline: none;
     cursor: pointer;
-    font-size: 2rem;
+    pointer-events: none;
 }
 
-button:hover {
-    background-color: unset;
-}
-
-.deleteButton{ 
-    float: right;
-}
-
-::-webkit-scrollbar {
-    width: 2px;
-}
-
-/* 스크롤바 트랙 */
-::-webkit-scrollbar-track {
-    background: transparent; 
-}
-
-/* 스크롤바 핸들 */
-::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 4px;
-}
-
-.searchRouteInputDelete{
-    display: flex;
-    height: 2.6rem;
-    margin-left: 110rem;
-    padding: 0 1.8rem;
-    border: none;
+.editGroupName{
+    width: 52rem;
+    height: 2.4rem;
+    padding-left: 0.3rem;
+    border: 0.1rem solid #B5B5B5;
     border-radius: 0.2rem;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+    background-color: white;
+    cursor: text;
+    pointer-events: auto;
+}
+
+.groupNameEditBtn{
+    position: absolute;
+    top: 50%;
+    right: 5rem;
+    transform: translate(0, -50%);
+    display: flex;
+    align-items: center;
+}
+
+.groupNameSaveBtn{
+    position: absolute;
+    top: 50%;
+    right: 5rem;
+    display: none;
+    background-color: #0069D9;
+    transform: translate(0, -50%);
+}
+
+.documentContentsTableTbody {
+    display: none;
+}
+
+
+.documentContentsTableTbody td:nth-child(2) {
+    cursor: pointer;
+}
+
+.openFolder {
+    display: table-row-group;
+}
+
+.documentContentsTable tbody tr {
+    width: 100%;
+    height: 3.6rem;
+    background-color: white;
+}
+
+.documentContentsTable thead td:nth-child(3) {
+    text-align: center;
+    width: 7%;
+}
+.documentContentsTable thead td:nth-child(10) {
+    text-align: center;
+    width: 10%;
+}
+
+.documentContentsTable tbody td {
+    border-right: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
     font-size: 1.4rem;
-    color: white;
+}
+
+.documentContentsTable tbody td:nth-child(1) {
+    text-align: center;
+    width: 3%;
+}
+
+.documentContentsTable tbody td:nth-child(2) {
+    text-align: left;
+    padding-left: 4rem;
+    width: 80%;
+    box-sizing: border-box;
+}
+
+.documentContentsTable tbody td:nth-child(3) {
+    text-align: center;
+    width: 7%;
+}
+
+.documentContentsTable tbody td:nth-child(4) {
+    text-align: center;
+    width: 10%;
+}
+
+.documentContentsTable tbody tr:nth-last-child(1) td {
+    text-align: center;
+}
+
+.uploadFile {
+    display: flex;
+    justify-content: space-between;
+    width: 10rem;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.uploadFileIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 1.1rem;
     background-color: #444444;
+}
+
+.uploadFileIcon svg{
+    width: 58%;
+}
+
+.addGroupContainer {
+    display: flex;
+    justify-content: flex-start;
+    padding: 2rem;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.addGroupBox {
+    display: flex;
+    justify-content: space-between;
+    width: 8.4rem;
+    height: 2.2rem;
+    font-size: 1.4rem;
     cursor: pointer;
 }
 
-.searchRouteInputDeleteblue{
-    display: flex;
-    height: 2.6rem;
-    margin-left: 2rem;
-    padding: 0 1.8rem;
-    border: none;
+.popupFooter div:nth-child(2){
+    background-color: #444444;
+}
+
+.popupArticleInput{
+    width: 50rem;
+    height: 2.4rem;
+    padding-left: 0.3rem;
+    border: 0.1rem solid #B5B5B5;
     border-radius: 0.2rem;
-    font-size: 1.4rem;
-    color: white;
-    background-color: #0075FF;
-    cursor: pointer;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.groupAddBtn,
+.uploadFileAdd{
+    background-color: #0069D9;
+    margin-right: 1rem;
 }
